--- a/src/app/list/list/list.component.html
+++ b/src/app/list/list/list.component.html
@@ -12,13 +12,19 @@
 			<label>Email</label>
 				<input type="text" [(ngModel)]="user.email" name="email" placeholder="email" class="form-control"/>
 		</div>
-		<button type="submit">Add user</button>
+		<div class="form-group">
+			<label>Role</label>
+				<input type="checkbox" [(ngModel)]="user.role" name="role" placeholder="role" class="form-control"/>
+		</div>
+		<button type="submit" (click)="addUser()">Add user</button>
 	</form>
 	<h1>Users list</h1>
 	<div *ngFor="let user of users">
 		<p>{{user.id}}</p>
 		<p>{{user.name}}</p>
 		<p>{{user.email}}</p>
+		<p>{{user.role}}</p>
 		<button (click)="deleteUser(user.id)">X</button>
 	</div>
+
 </div>
